/*
 * Copyright 2023- IBM Inc. All rights reserved
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";
package proto;
option go_package = ".;common";

message LeaderNodeMsg {
  bytes Addr = 1;
  int32 Port = 2;
  uint32 NodeId = 3;
}

message DeleteInodeMapArgs {
  repeated uint64 InodeKey = 1;
  repeated string Key = 2;
}

message Ack {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
}

message GetApiPortArgs {}

message GetApiPortRet {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  int32 ApiPort = 3;
}

message TxIdMsg {
  uint32 ClientId = 1;
  uint32 SeqNum = 2;
  uint64 TxSeqNum = 3;
}

message MigrationIdMsg {
  uint32 ClientId = 1;
  uint32 SeqNum = 2;
}

/* messages to get meta */

message GetMetaAnyArgs {
  string Key = 1;
  uint64 InodeKey = 2;
  int64 ChunkSize = 3;
  uint64 ParentInodeKey = 4;
  uint64 NodeListVer = 5;
  int32 ExpireMs = 6;
}

message GetWorkingMetaRetMsg {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  CopiedMetaMsg Meta = 3;
  repeated CopiedMetaChildMsg Children = 4;
}

message CopiedMetaChildMsg {
  string Name = 1;
  uint64 InodeKey = 2;
}

message CopiedMetaMsg {
  uint64 InodeKey = 1;
  uint32 Version = 2;
  int64 ChunkSize = 3;
  int64 Size = 4;
  int64 LastModified = 5;
  int32 ExpireMs = 6;
  uint32 Mode = 7;
  uint32 Nlink = 8;
  string FetchKey = 9;
}

message InodeTreeMsg {
  uint64 InodeKey = 1;
  repeated CopiedMetaChildMsg Children = 2;
}

message UpdateMetaAttrMsg {
  uint64 InodeKey = 1;
  uint32 Mode = 2;
  int64 Ts = 3;
}

message MetaRWHandlerMsg {
  uint64 InodeKey = 1;
  string FetchKey = 2;
  uint32 Version = 3;
  int64 ChunkSize = 4;
  int64 Size = 5;
  int64 MTime = 6;
  uint32 Mode = 7;
}

message ReadChunkArgs {
  MetaRWHandlerMsg Handler = 1;
  int64 Offset = 2;
  int32 Length = 3;
  bool Blocking = 4;
  bool ReadAhead = 5;
}

message ReadChunkRet {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  int32 Count = 3;
}

message PrefetchChunkArgs {
  MetaRWHandlerMsg Handler = 1;
  int64 Offset = 3;
  int64 Length = 4;
  uint64 NodeListVer = 5;
}

/* messages to update chunks */

message UpdateChunkArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  int64 Offset = 4;
  int64 ChunkSize = 5;
  bytes ExtBufChksum = 6;
}

message StagingChunkMsg {
  TxIdMsg TxId = 1;
  int64 Offset = 2;
  int64 Length = 3;
  int64 LogOffset = 4;
}

message UpdateChunkRet {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  StagingChunkMsg Stag = 3;
}

message CommitUpdateChunksArgs {
  CopiedMetaMsg Meta = 1;
  CopiedMetaMsg Prev = 2;
  UpdateChunkRecordMsg Chunk = 3;
  TxIdMsg TxId = 4;
  uint64 NodeListVer = 5;
}

message CommitDeleteChunkArgs {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
  CopiedMetaMsg Prev = 3;
  int64 Offset = 4;
  int64 DeleteLength = 5;
  uint64 NodeListVer = 6;
}

message CommitExpandChunkArgs {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
  CopiedMetaMsg Prev = 3;
  int64 Offset = 4;
  int64 ExpandLength = 5;
  uint64 NodeListVer = 6;
}

/* messages for Tx coordinator */

message CoordinatorIdMsg {
  uint32 ClientId = 1;
  uint32 SeqNum = 2;
}

message CoordinatorRetMsg {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  CopiedMetaMsg Meta = 3;
  repeated CopiedMetaMsg Parent = 4;
  int32 ExtReply = 5;
}

message UpdateChunkRecordMsg {
  string GroupId = 1;
  repeated StagingChunkMsg Stags = 2;
}

message FlushObjectArgs {
  CoordinatorIdMsg Id = 1;
  uint64 NodeListVer = 2;
  uint64 InodeKey = 4;
  int64 MTime = 5;
  uint32 Mode = 6;
  repeated UpdateChunkRecordMsg Records = 7;
}

message TruncateObjectArgs {
  CoordinatorIdMsg Id = 1;
  uint64 NodeListVer = 2;
  uint64 InodeKey = 3;
  int64 NewSize = 4;
}

message DeleteObjectArgs {
  uint64 NodeListVer = 1;
  CoordinatorIdMsg Id = 2;
  uint64 ParentInodeKey = 3;
  string ChildName = 4;
  uint64 ChildInodeKey = 5;
  string ParentFullPath = 6;
}

message HardLinkObjectArgs {
  CoordinatorIdMsg Id = 1;
  uint64 NodeListVer = 2;
  uint64 SrcInodeKey = 3;
  uint64 SrcParentInodeKey = 4;
  string DstParentKey = 5;
  uint64 DstParentInodeKey = 6;
  string ChildName = 7;
  uint64 ChildInodeKey = 8;
}

message RenameObjectArgs {
  CoordinatorIdMsg Id = 1;
  uint64 NodeListVer = 2;
  string SrcParentKey = 3;
  uint64 SrcParentInodeKey = 4;
  string SrcName = 5;
  string DstParentKey = 6;
  uint64 DstParentInodeKey = 7;
  string DstName = 8;
  uint64 ChildInodeKey = 9;
}

message CreateObjectArgs {
  CoordinatorIdMsg Id = 1;
  uint64 NodeListVer = 2;
  string ParentFullPath = 3;
  uint64 ParentInodeKey = 4;
  string ChildName = 5;
  uint64 ChildInodeKey = 6;
  int64 ChunkSize = 7;
  uint32 Mode = 8;
  int32 ExpireMs = 9;
}

/* messages to update meta */

message MetaTxMsg {
  CopiedMetaMsg NewMeta = 1;
  LeaderNodeMsg Leader = 2;
  int32 Status = 3;
}

message MetaTxWithPrevMsg {
  LeaderNodeMsg Leader = 1;
  CopiedMetaMsg NewMeta = 2;
  CopiedMetaMsg Prev = 3;
  int32 Status = 4;
}

message UpdateMetaAttrRpcMsg {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  uint32 Mode = 4;
  int64 Ts = 5;
}

message BeginCreateMetaArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  uint64 ParentInodeKey = 4;
  string NewKey = 5;
  int64 ChunkSize = 6;
  uint32 Mode = 7;
  int32 ExpireMs = 8;
}

message BeginCreateChildMetaArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  uint64 ChildInodeKey = 4;
  string ChildName = 5;
  bool ChildIsDir = 6;
}

message BeginUpdateMetaSizeArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  int64 NewSize = 4;
  int64 MTime = 5;
  uint32 Mode = 6;
}

message BeginTruncateMetaArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  int64 NewObjectSize = 4;
}

message BeginUpdateMetaKeyArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  string OldKey = 4;
  string NewKey = 5;
  uint64 Parent = 6;
}
message BeginDeleteMetaArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  string RemovedKey = 4;
}

message BeginLinkMetaArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  uint64 ChildInodeKey = 4;
}

message BeginUnlinkMetaArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  string ParentKey = 4;
  string ChildName = 5;
  bool ChildIsDir = 6;
}

message UpdateParentRetMsg {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  UpdateParentMetaInfoMsg Info = 3;
  int32 MayErrorReply = 4;
}

message BeginRenameMetaArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 InodeKey = 3;
  string SrcName = 4;
  string DstName = 5;
  uint64 ChildInodeKey = 6;
}

message CommitArgs {
  TxIdMsg RpcSeqNum = 1;
  TxIdMsg CommitTxId = 2;
  uint64 NodeListVer = 3;
  bool NodeLock = 4;
}

message CommitMigrationArgs {
  TxIdMsg RpcSeqNum = 1;
  TxIdMsg CommitTxId = 2;
  MigrationIdMsg MigrationId = 3;
  uint64 NodeListVer = 4;
}

message AbortCommitArgs {
  TxIdMsg RpcSeqNum = 1;
  uint64 NodeListVer = 2;
  repeated TxIdMsg AbortTxIds = 3;
  bool NodeLock = 4;
}

message UpdateChildAttrMsg {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  uint64 ParentInodeKey = 3;
  uint64 ChildInodeKey = 4;
  uint32 ChildMode = 5;
}

message BeginUpdateChildAttrMsg {
  TxIdMsg TxId = 1;
  uint64 ParentInodeKey = 2;
  uint64 ChildInodeKey = 3;
  uint32 ChildMode = 4;
}

/* messages to persist meta */

message PersistArgs {
  uint64 InodeKey = 1;
  int32 Priority = 2;
  CoordinatorIdMsg Id = 3;
  uint64 NodeListVer = 4;
}

message DeletePersistArgs {
  uint64 NodeListVer = 1;
  CoordinatorIdMsg Id = 2;
  string Key = 3;
  int32 Priority = 4;
}

/* messages to persist chunks */

message MpuAddArgs {
  uint64 NodeListVer = 1;
  TxIdMsg TxId = 2;
  string MetaKey = 3;
  CopiedMetaMsg Meta = 4;
  repeated int64 Offsets = 5;
  string UploadId = 6;
  int32 Priority = 7;
}

message MpuAddRetIndex {
  uint32 Index = 1;
  string Etag = 2;
  uint32 CVer = 3;
}

message MpuAddRet {
  repeated MpuAddRetIndex Outs = 1;
  int32 Status = 2;
  LeaderNodeMsg Leader = 3;
}

message CommitPersistChunkArgs {
  TxIdMsg TxId = 1;
  TxIdMsg CommitTxId = 2;
  uint64 InodeKey = 3;
  repeated int64 Offsets = 4;
  repeated uint32 CVers = 5;
  int32 Priority = 6;
  uint32 Index = 7;
  uint64 NodeListVer = 8;
}

/* messages for node scaling */

message NodeMsg {
  bytes Addr = 1;
  int32 Port = 2;
  uint32 NodeId = 3;
  string GroupId = 4;
}

message UpdateNodeListArgs {
  NodeMsg Node = 1;
  uint64 NodeListVer = 2;
  TxIdMsg TxId = 3;
  bool IsAdd = 4;
  MigrationIdMsg MigrationId = 5;
}

message InitNodeListArgs {
  repeated NodeMsg Nodes = 1;
  uint64 NewNodeListVer = 2;
  uint64 NodeListVer = 3;
  TxIdMsg TxId = 4;
  MigrationIdMsg MigrationId = 5;
}

message UpdateNodeListRet {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  bool NeedRestore = 3;
}

message WorkingChunkMsg {
  uint32 ChunkVer = 1;
  int64 Offset = 2;
  CommittedStagingChunkMsg Stags = 3;
}

message CommittedStagingChunkMsg {
  int64 Slop = 1;
  int64 Length = 2;
  bool IsDeleting = 3;
  bytes Data = 4;
}

message GetApiIpAndPortRet {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  string ApiAddr = 3;
  int32 ApiPort = 4;
}

message NodeJoinArgs {
  string RequesterNode = 1;
  string GroupId = 2;
  bool IsReadOnly = 3;
  uint64 NodeListVer = 8;
}

message NodeJoinRet {
  bool IsReadOnly = 1;
  string GroupId = 2;
  int32 Status = 3;
  LeaderNodeMsg Leader = 4;
}

message RestoreDirtyChunksArgs {
  MigrationIdMsg MigrationId = 1;
  uint64 InodeKey = 2;
  int64 ChunkSize = 3;
  uint32 ChunkVer = 4;
  int64 Offset = 5;
  int64 ObjectSize = 6;
  bytes ExtBufChksum = 7;
}

message RestoreDirtyAddChunkMsg {
  MigrationIdMsg MigrationId = 1;
  AppendCommitUpdateChunksMsg Chunk = 2;
}

message RestoreDirtyRemoveChunkMsg {
  MigrationIdMsg MigrationId = 1;
  repeated ChunkRemoveDirtyMsg RemoveDirtyChunks = 4;
}

message PrepareRemoveDirtyMetas {
  MigrationIdMsg MigrationId = 1;
  repeated uint64 InodeKeys = 2;
  repeated uint64 DirInodeKeys = 3;
}

message CoordinatorUpdateNodeListArgs {
  NodeMsg Node = 1;
  CoordinatorIdMsg Id = 2;
  bool IsAdd = 3;
  uint64 NodeListVer = 4;
}

message UpdateMembershipRet {
  int32 Status = 1;
  LeaderNodeMsg Leader = 2;
  MembershipListMsg List = 3;
}

message MembershipListMsg {
  repeated NodeMsg Servers = 1;
  repeated TxIdMsg TxIds = 2;
}

message MigrationArgs {
  NodeMsg Node = 1;
  uint64 NodeListVer = 2;
  TxIdMsg TxId = 3;
  MigrationIdMsg MigrationId = 4;
}


/* messages for logging */
message StagingChunkAddMsg {
  int64 Slop = 1;
  int64 Length = 2;
  bytes UpdateType = 3;
  int64 LogOffset = 4;
  string FetchKey = 5;
  int32 Filled = 6;
}

message WorkingChunkAddMsg {
  int64 Offset = 1;
  repeated StagingChunkAddMsg Stagings = 3;
}

message AppendCommitUpdateChunksMsg {
  uint64 InodeKey = 1;
  uint32 Version = 2;
  int64 ChunkSize = 3;
  int64 ObjectSize = 4;
  bool IsDelete = 5;
  repeated WorkingChunkAddMsg Chunks = 6;
}

message MetaCommitRecordMsg {
  uint64 TxSeqNum = 1;
  string GroupId = 2;
}

message ParticipantTxMsg {
  TxIdMsg TxId = 1;
  string GroupId = 2;
}

message FlushCoordinatorMsg {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
  repeated UpdateChunkRecordMsg Chunks = 3;
  TxIdMsg CommitTxId = 4;
}

message TruncateChunkInfoMsg {
  int64 Offset = 1;
  int64 Length = 2;
}

message TruncateCoordinatorMsg {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
  int64 PrevSize = 3;
  repeated TruncateChunkInfoMsg LocalChunks = 4;
  repeated TruncateChunkInfoMsg RemoteChunks = 5;
  TxIdMsg CommitTxId = 6;
}

message HardLinkCoordinatorMsg {
  TxIdMsg TxId = 1;
  string NewKey = 2;
  CopiedMetaMsg Meta = 3;
  uint64 Parent = 4;
  repeated ParticipantTxMsg RemoteParent = 5;
  TxIdMsg CommitTxId = 6;
}

message CreateCoordinatorMsg {
  TxIdMsg TxId = 1;
  string NewKey = 2;
  CopiedMetaMsg Meta = 3;
  uint64 ParentInodeKey = 4;
  repeated ParticipantTxMsg RemoteParent = 5;
  TxIdMsg CommitTxId = 6;
}

message DeleteCoordinatorMsg {
  TxIdMsg TxId = 1;
  string Key = 2;
  CopiedMetaMsg Meta = 3;
  uint64 Parent = 4;
  repeated ParticipantTxMsg RemoteParent = 5;
  repeated TruncateChunkInfoMsg LocalChunks = 6;
  repeated TruncateChunkInfoMsg RemoteChunks = 7;
  TxIdMsg CommitTxId = 8;
}

message RenameMetaInfoMsg {
  CopiedMetaMsg Meta = 1;
  string OldKey = 2;
  string NewKey = 3;
}

message UpdateParentMetaInfoMsg {
  uint64 InodeKey = 1;
  string Key = 2;
  uint64 AddInodeKey = 3;
  string AddChild = 4;
  string RemoveChild = 5;
  bool ChildIsDir = 6;
}

message RenameCoordinatorMsg {
  TxIdMsg TxId = 1;
  repeated RenameMetaInfoMsg Metas = 2;
  repeated UpdateParentMetaInfoMsg Parents = 3;
  repeated ParticipantTxMsg Remotes = 4;
  TxIdMsg CommitTxId = 5;
}

message UpdateMetaMsg {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
}

message CreateMetaMsg {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
  uint64 ParentInodeKey = 3;
  string NewKey = 4;
}

message UpdateParentMetaMsg {
  TxIdMsg TxId = 1;
  UpdateParentMetaInfoMsg Info = 2;
}

message DeleteMetaMsg {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
  string Key = 3;
}

message UpdateMetaKeyMsg {
  TxIdMsg TxId = 1;
  CopiedMetaMsg Meta = 2;
  repeated CopiedMetaChildMsg Children = 3;
  string OldKey = 4;
  string NewKey = 5;
}

message UpdateNodeInfoMsg {
  TxIdMsg TxId = 1;
  NodeMsg Node = 2;
}

message UpdateNodeListCoordinatorMsg {
  TxIdMsg TxId = 1;
  MigrationIdMsg MigrationId = 2;
  NodeMsg Target = 3;
  bool IsAdd = 4;
  repeated UpdateNodeInfoMsg Remotes = 5;
  TxIdMsg CommitTxId = 6;
}

message InitNodeListMsg {
  NodeMsg Node = 1;
}

message UpdateNodeListMsg {
  TxIdMsg TxId = 1;
  MigrationIdMsg MigrationId = 2;
  bool IsAdd = 3;
  bool NeedRestore = 4;
  repeated NodeMsg Nodes = 5;
  uint64 NodeListVer = 6;
}

message MpuBeginMsg {
  TxIdMsg TxId = 1;
  repeated string Keys = 2;
  repeated string UploadIds = 3;
}

message StringPair {
  string Key = 1;
  string Value = 2;
}

message PersistedChunkInfoMsg {
  TxIdMsg TxId = 1;
  string GroupId = 2;
  uint64 InodeKey = 3;
  repeated int64 Offsets = 4;
  repeated uint32 CVers = 5;
}

message PersistCoordinatorMsg {
  TxIdMsg TxId = 1;
  uint64 InodeKey = 2;
  uint32 MetaVer = 3;
  int64 Ts = 4;
  repeated PersistedChunkInfoMsg Chunks = 5;
  repeated string MetaKeys = 6;
  TxIdMsg CommitTxId = 7;
}

message DeletePersistCoordinatorMsg {
  repeated string MetaKeys = 1;
}

message ChunkRemoveDirtyMsg {
  uint64 InodeKey = 1;
  int64 Offset = 2;
  uint32 Version = 3;
}

message InodeToFileMsg {
  uint64 InodeKey = 1;
  string FilePath = 2;
}

message MigrationMsg {
  TxIdMsg TxId = 1;
  MigrationIdMsg MigrationId = 2;
  repeated uint64 RemoveDirtyInodeIds = 3;
  repeated ChunkRemoveDirtyMsg RemoveDirtyChunks = 4;
  repeated CopiedMetaMsg AddMetas = 5;
  repeated AppendCommitUpdateChunksMsg AddChunks = 6;
  repeated InodeToFileMsg AddFiles = 7;
  repeated uint64 RemoveDirInodeIds = 8;
  repeated InodeTreeMsg DirInodes = 9;
  repeated uint64 DirtyMetas = 10;
}

message AddInodeFileMapMsg {
  CopiedMetaMsg Meta = 1;
  repeated CopiedMetaChildMsg Children = 2;
  string Key = 3;
}

message OpenChunksArgs {
  uint64 NodeListVer = 1;
  MetaRWHandlerMsg Handler = 2;
  string Key = 3;
}

message CreateChunkArgs {
  uint64 InodeKey = 1;
  string Key = 2;
  uint32 Version = 3;
  int64 Offset = 4;
  int64 LogOffset = 5;
  int64 Length = 6;
  uint32 LogIdx = 7;
}

message SetXAttrArgs {
  uint64 NodeListVer = 1;
  int64 ChunkSize = 2;
  int32 ExpireMs = 3;
}

message CompactLogCoordinatorMsg {
  TxIdMsg TxId = 1;
  repeated AppendCommitUpdateChunksMsg Chunks = 2;
  repeated CopiedMetaMsg Metas = 3;
  repeated InodeToFileMsg MetaFiles = 4;
  repeated CopiedMetaMsg DirMetas = 5;
  repeated InodeToFileMsg DirMetaFiles = 6;
  RaftNodeListMsg NodeList = 7;
}

// message for log compaction

message DropLRUChunksArgs {
  repeated uint64 InodeKeys = 1;
  repeated int64 Offsets = 2;
}

message DirtyChunkInfoMsg {
  uint64 InodeKey = 1;
  repeated int64 Offsets = 2;
  repeated uint32 Versions = 3;
  int64 ChunkSize = 4;
  int64 ObjectSize = 5;
}

message DirtyMetaInfoMsg {
  uint64 InodeKey = 1;
  uint32 Version = 2;
  int64 Timestamp = 3;
  int32 ExpireMs = 4;
}

message DeletedFileInfoMsg {
  string Key = 1;
  uint64 InodeKey = 2;
  int64 Timestamp = 3;
  int32 ExpireMs = 4;
}

message DirtyMgrSnapshotMsg {
  repeated DirtyChunkInfoMsg CTable = 1;
  repeated DirtyMetaInfoMsg MTable = 2;
  repeated DeletedFileInfoMsg DTable = 3;
  repeated MigrationMsg Migrating = 4;
}

message RaftNodeListMsg {
  repeated NodeMsg Nodes = 1;
  uint64 Version = 2;
}

message RaftGroupMgrSnapshotMsg {
  RaftNodeListMsg NodeList = 1;
  repeated NodeMsg Leaders = 2;
}

message RemoveNonDirtyChunksMsg {
  repeated uint64 InodeKeys = 1;
}

message ForgetAllDirtyLogArgs {

}

message SnapshotMsg {
  MigrationIdMsg  MigrationId = 1;
  uint32   NewExtLogId = 2;
  repeated CopiedMetaMsg Metas = 3;
  repeated InodeToFileMsg Files = 4;
  repeated InodeTreeMsg Dirents = 5;
  repeated DirtyMetaInfoMsg DirtyMetas = 6;
  repeated AppendCommitUpdateChunksMsg DirtyChunks = 7;
  repeated RaftNodeListMsg NodeList = 8;
}